# vaporwm

./: Cargo.toml  README.md  rustfmt.toml
scripts/: set-gif-bg  xephyr
scripts/no-longer-human-frames/: no-longer-human.gif.000  no-longer-human.gif.001  no-longer-human.gif.002  no-longer-human.gif.003  no-longer-human.gif.004  no-longer-human.gif.005  no-longer-human.gif.006  no-longer-human.gif.007  no-longer-human.gif.008  no-longer-human.gif.009  no-longer-human.gif.010  no-longer-human.gif.011  no-longer-human.gif.012  no-longer-human.gif.013  no-longer-human.gif.014  no-longer-human.gif.015  no-longer-human.gif.016  no-longer-human.gif.017  no-longer-human.gif.018  no-longer-human.gif.019
src/: api.rs  app.rs  bottom_panel.rs  client.rs  keycode.rs  main.rs  spawner.rs  top_panel.rs  util.rs  wm.rs
