[package]
name = "vaporwm"
version = "0.0.1"
edition = "2021"

[dependencies]
x11rb = { version = "0.12.0", features = [
    "allow-unsafe-code",
    "cursor",
    "shm",
] }
nix = { version = "0.27.1", features = [
    "poll",
    "process",
    "fs",
    "mman",
], default_features = false }
pangocairo = "0.19.2"
cairo-rs = { version = "0.19.4", features = ["xcb", "png"] }
chrono = "0.4.38"
num_enum = "0.7.2"
serde = { version = "1.0.199", features = ["serde_derive"] }
serde_json = "1.0.116"

[profile.release]
strip = true
lto = true
